@@ -73,7 +73,8 @@ Optional arguments:
  slacker.it = 'slackr'
  slackonly.com = 'slonly'
  Alien's ktown = 'ktown'
- 
+ Alien's multilib = 'multi'
+  
  Default enable repository is 'slack' and 'sbo'.
  Add or remove repository in configuration file '/etc/slpkg/slpkg.conf'
 
