@@ -57,7 +57,8 @@ class PkgDesc(object):
                 'studio': 'studio_repo/PACKAGES.TXT',
                 'slackr': 'slackr_repo/PACKAGES.TXT',
                 'slonly': 'slonly_repo/PACKAGES.TXT',
-                'ktown': 'ktown_repo/PACKAGES.TXT'
+                'ktown': 'ktown_repo/PACKAGES.TXT',
+                'multi': 'multi_repo/PACKAGES.TXT'
             }
             self.lib = lib_path + repos[self.repo]
 
